# chatterbox

./: pyproject.toml
src/chatterbox/: tts.py  tts_turbo.py  vc.py
